<resources>
    <string name="app_name">AppTarberna</string>
    <string name="sing_in">Registrar</string>
    <string name="Login">Acceder</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="proveedor">Proveedor</string>
    <string name="Logout">Cerrar Sesión</string>
    <string name="google">Google</string>
    <string name="prefs_file">com.example.appTaberna.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_client_main">ClientMainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="PrincipalCliente">Principal Cliente</string>
    <string name="name">Nombre</string>
    <string name="Address">Dirección</string>
    <string name="Save">Guardar</string>
</resources>